# chess_tui

./: README.md  pyproject.toml
src/chess_tui/: __init__.py  app.py  controllers.py  moves.py  pgn_utils.py  replay.py  widgets.py
tests/: test_controllers.py  test_moves.py  test_pgn_export.py  test_replay.py
